= make 'Show potion abbreviation' show the correct colour