@@ -1,1 +1,3 @@
 = make 'Show potion abbreviation' show the correct colour
+= fixed Bingo Party message formatter triggering when it shouldn't
+= fixed Bingo Party message formatter custom prefix
